<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/B7"
    android:orientation="vertical">




    <include layout="@layout/layout_title2"/>


    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editpassword2"
        android:textAppearance="@style/TextAppear.Theme.C20_Size13"
        />
    
    <EditText
        android:id="@+id/et_password"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:paddingLeft="15dp"
        android:inputType="number"
        android:hint="@string/please_input"
        android:textAppearance="@style/TextAppear.Theme.B2_Size14"
        android:background="@color/white"
        android:textColorHint="@color/B5"

        />


    <TextView
        android:id="@+id/tv_confim"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="26dp"
        android:background="@drawable/shape_login2"
        android:gravity="center"
        android:text="@string/confim"
        android:textAppearance="@style/TextAppear.Theme.white" />


</LinearLayout>